platform/k8s/components/mesh/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: atlas-platform-permissive
spec:
  mtls:
    mode: PERMISSIVE
