platform/k8s/components/mesh/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: atlas-platform-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: atlas-platform-istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - staging.atlas.example.com
        - api.staging.atlas.example.com
