platform/k8s/components/mesh/istio/networkpolicy-mesh-control-plane-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: atlas-mesh-control-plane-egress
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - inventory-migration
          - inventory-service
          - web
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              istio: pilot
      ports:
        - protocol: TCP
          port: 15012
